<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Ian Buttimer.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b_previous_stepA"
        android:drawableLeft="@drawable/ic_navigate_before_white_24dp"
        android:drawableStart="@drawable/ic_navigate_before_white_24dp"
        android:background="@drawable/primary_touch_selector"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/previous_step"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.40"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"/>
    <Button
        android:id="@+id/b_next_stepA"
        android:drawableRight="@drawable/ic_navigate_next_white_24dp"
        android:drawableEnd="@drawable/ic_navigate_next_white_24dp"
        android:background="@drawable/primary_touch_selector"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/next_step"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"/>

</LinearLayout>