...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ie.ianbuttimer.bakingguru.MainActivity">

    <FrameLayout
        android:id="@+id/fl_list_mainA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_item_list_mainA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_list_content" />

        <ProgressBar
            android:id="@+id/pb_mainA"
...
