...
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.ianbuttimer.bakingguru.ItemDetailFragment">

    <TextView
        android:id="@+id/tv_step_title_stepA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/step_title_text"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:text="@string/step_description"
...
